ADD: status if no tables found

--- a/src/org/afraid/poison/db2php/PhpClassVisualPanel1.form
+++ b/src/org/afraid/poison/db2php/PhpClassVisualPanel1.form
@@ -71,6 +71,7 @@
             <Property name="cellRenderer" type="javax.swing.ListCellRenderer" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
               <Connection code="new DatbaseTablesListRenderer()" type="code"/>
             </Property>
+            <Property name="enabled" type="boolean" value="false"/>
           </Properties>
         </Component>
       </SubComponents>
