--- a/src/org/afraid/poison/db2php/PhpClassVisualPanel1.form
+++ b/src/org/afraid/poison/db2php/PhpClassVisualPanel1.form
@@ -69,7 +69,7 @@
         <Component class="javax.swing.JList" name="tablesSelection">
           <Properties>
             <Property name="cellRenderer" type="javax.swing.ListCellRenderer" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="new DatbaseTablesListRenderer()" type="code"/>
+              <Connection code="new org.afraid.poison.db2php.DatbaseTablesListCellRenderer()" type="code"/>
             </Property>
             <Property name="enabled" type="boolean" value="false"/>
           </Properties>
