--- a/src/org/afraid/poison/db2php/PhpClassVisualPanelTableSelection.form
+++ b/src/org/afraid/poison/db2php/PhpClassVisualPanelTableSelection.form
@@ -55,7 +55,7 @@
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="org/afraid/poison/db2php/Bundle.properties" key="PhpClassVisualPanel1.jLabel1.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+          <ResourceString bundle="org/afraid/poison/db2php/Bundle.properties" key="PhpClassVisualPanelTableSelection.jLabel1.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
         </Property>
       </Properties>
     </Component>
@@ -69,7 +69,7 @@
         <Component class="javax.swing.JList" name="tablesSelection">
           <Properties>
             <Property name="cellRenderer" type="javax.swing.ListCellRenderer" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="new org.afraid.poison.db2php.DatbaseTablesListCellRenderer()" type="code"/>
+              <Connection code="new org.afraid.poison.db2php.TablesListCellRenderer()" type="code"/>
             </Property>
             <Property name="enabled" type="boolean" value="false"/>
           </Properties>
