--- a/src/org/afraid/poison/db2php/PhpClassUtilityVisualPanel1.form
+++ b/src/org/afraid/poison/db2php/PhpClassUtilityVisualPanel1.form
@@ -54,6 +54,7 @@
   <SubComponents>
     <Component class="javax.swing.JCheckBox" name="dfc">
       <Properties>
+        <Property name="selected" type="boolean" value="true"/>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
           <ResourceString bundle="org/afraid/poison/db2php/Bundle.properties" key="PhpClassUtilityVisualPanel1.dfc.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
         </Property>
@@ -61,6 +62,7 @@
     </Component>
     <Component class="javax.swing.JCheckBox" name="simpleDatabaseInterface">
       <Properties>
+        <Property name="selected" type="boolean" value="true"/>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
           <ResourceString bundle="org/afraid/poison/db2php/Bundle.properties" key="PhpClassUtilityVisualPanel1.simpleDatabaseInterface.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
         </Property>
