--- a/src/org/afraid/poison/db2php/PhpClassUtilityVisualPanel1.form
+++ b/src/org/afraid/poison/db2php/PhpClassUtilityVisualPanel1.form
@@ -52,10 +52,10 @@
     </Component>
     <Component class="javax.swing.JCheckBox" name="simpleDatabaseInterface">
       <Properties>
-        <Property name="selected" type="boolean" value="true"/>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
           <ResourceString bundle="org/afraid/poison/db2php/Bundle.properties" key="PhpClassUtilityVisualPanel1.simpleDatabaseInterface.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
         </Property>
+        <Property name="enabled" type="boolean" value="false"/>
       </Properties>
     </Component>
     <Component class="org.afraid.poison.db2php.FileSelectionPanel" name="fileSelectionPanel">
